--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,14 @@
 .ui-menu-color-contact{
     background-color: #3498bd;
 }
+
+.ui-menu-color-interests {
+    background-color: #e74c3c;
+}
+
+.ui-menu-color-github {
+    background-color: #1c4a6c;
+}
 .ui-menu-color-download{
     background-color: #525252;
 }
@@ -358,3 +366,5 @@ footer{
     max-width: 50%;
 }
 }
+
+div #map {min-height: 360px;}
